--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,5 +23,15 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ru.practicum.ExploreWithMeService</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
