--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 stats.url=http://localhost:9090
+stats.port=9090
 spring.config.import=optional:classpath:logging.properties
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
@@ -10,6 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.sql.init.mode=always
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6432/ewm-db
+spring.datasource.url=jdbc:postgresql://localhost:6432/ewm_db
 spring.datasource.username=ewm
 spring.datasource.password=ewm
